--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "^2.5.6",
-    "ejs-locals": "^1.0.2",
+    "ejs-blocks": "^0.1.4",
     "errorhandler": "^1.5.0",
     "express": "~4.13.4",
     "knex": "^0.13.0",
