--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.7.0",
     "mysql": "^2.13.0",
     "request": "^2.79.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.4"
   }
 }
